[package]
name = "tracing_layer_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
console = "0.15.7"

[lib]
name = "tracing_layer_lib"
path = "src/lib.rs"
